--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediaPipe Handpose</title>
-    <link rel="stylesheet" href="./intro.css">
+    <link rel="stylesheet" href="./index.css">
     <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
     <script defer type="module" src="./script.js"></script>
 </head>
